<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textColor="@color/colortext"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showtrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showtrue"
            android:textColor="@color/bgcolor" />

        <Button
            android:id="@+id/showfalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showfalse"
            android:textColor="@color/bgcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showc"
            android:textColor="@color/bgcolor" />

        <Button
            android:id="@+id/showd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showd"
            android:textColor="@color/bgcolor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/showprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/shownext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_arrow_forward_ios_black_18dp" />


    </LinearLayout>





</LinearLayout>

